# JSR-SDK

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  JSR-SDK.csproj  JSR-SDK.sln  JSR-SDK.vcxproj  JSR-SDK.vcxproj.filters  LICENSE  README.md  README.txt
.github/workflows/: release.yml
include/: JSRSDKWrapper.h
include/JSR-SDK/: ExceptionJSRSDK.h  InstrumentID.h  JSRLibMetadata.h  JSRSDKManager.h  PulserReceiverID.h
include/JSR-SDK/enums/: ConnectionType.h  DiscoveryStateFlags.h  DiscoveryStateFlagsC.h  ErrorCode.h  IsPulsing.h  ManagerState.h  NotifyType.h  PowerLimit.h  PropertyUnits.h  PulserImpedance.h  PulserPropertyDataType.h  PulserPropertyDataTypeC.h  PulserPropertyRoles.h  PulserReceiverState.h  PulserReceiverStateC.h  ReceiverMode.h  StatusChange.h  TriggerImpedance.h  TriggerPolarity.h  TriggerSource.h
include/JSR-SDK/events/: NotifyEvent.h  StatusChangedEvent.h
src/: JSRSDKManager.cpp  JSRSDKWrapper.cpp  JSRSDKWrapper.cs  MarshalEnums.cpp  MarshalTypes.cpp
test/: MarshalEnumsTest.cpp  MarshallTypesTest.cpp  test.cpp  test.vcxproj
